    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 140 - 27/11/2006 <==

+ <mave> added Gaussian output function (this complete the support for RBF networks)
+ <mave> added NormLinker (perform the euclidean norm calculation)
+ <mave> added DotLinker (perform the dot-product calculation)
B <mave> in CMakeLists.txt
+ <mave> added documentation about properties of classes
C <mave> CSS apidoc's stylesheet changed
+ <mave> now Vector property are saved into XML files

    ==> 135 - 13/11/2006 <==

B <mave> bugfixs in Doxygen documentation
+ <mave> implemented saveXML (vector properties are not yet supported)
+ <mave> method RealVec::at(int) for accessing element from a pointer (an alternative to operator[])
B <mave> bugfixs in parsing primitive types (int, u_int, char, u_char, boolean)
C <mave> improved and optimized XML parsing implementation
- <mave> removed special tag <outputfunction>

    ==> 133 - 10/11/2006 <==

B <mave> resolved bug in recursive property parsing
+ <mave> new method setCluster into OutputFunction class; this method is called when the function is inserted
            into a Cluster by the Cluster
+ <mave> xml parser now support Vector property and check is a property is writable before parsing it
+ <mave> added a Vector property to PoolFunction, 'functions', for settings the OutputFunction
+ <mave> New kind of properties that handles a Vector of Variant instead of single Variant value;
            new methods for creating/accessing them: addVectorProperty & set/getVectorProperty( name, index )

    ==> 132 - 10/11/2006 <==

+ <mave> Factory now creates also Propertized objects

    ==> 131 - 8/11/2006 <==
